--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "jest-watch-typeahead": "^0.6.5",
-    "msw": "^0.36.8"
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
